--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,102 @@
-.App {
-  text-align: center;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.flex {
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  background-color: rgb(50, 50, 50);
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  align-items: center;
+  height: 100vh;
+  width: 100%;
+}
+
+.title{
+  padding-bottom: 20px;
+}
+
+.todo {
+  border-radius: 5px;
+  padding: 10px 20px;
+  width: 25%;
+  background-color: rgb(69, 69, 69);
   color: white;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.todo .inputbox input {
+  background-color: rgb(90, 90, 90);
+  color: white;
+  border: rgb(90, 90, 90);
+  padding: 10px;
+  border-radius: 5px 0 0 5px;
+  width: 100%;
+  outline: none;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.todo .inputbox input::placeholder {
+  color: rgb(160, 160, 160);
+}
+
+.todo .inputbox button{
+  color: rgb(90, 90, 90);
+  padding: 10px;
+}
+
+
+
+.todo .inputbox{
+  display: flex;
+}
+
+.todolist{
+  padding: 10px 0 20px 20px;
+}
+.todolist .todopart{
+  display: flex;
+  flex-wrap: wrap;
+  width: 100%;
+  background-color: rgb(90, 90, 90);
+  padding: 10px;
+  border-radius: 5px;
+  margin-bottom: 5px;
+  justify-content: space-between;
+}
+
+.completed h4{
+  color: grey;
+  text-decoration: line-through;
+}
+
+.todopart h4{
+  width: 80%;
+}
+
+.todopart .add{
+  color: green;
+  cursor: pointer;
+}
+
+.todopart .remove{
+  cursor: pointer;
+  color: red;
+}
+
+.quote{
+  margin: 10px 0 20px;
+  font-style: italic;
+
+}
+
+.date{
+  width: 100%;
+  font-size: 0.8em;
+  color: rgb(180, 180, 180);
+  display: none;
+}
+
+.todopart:hover .date{
+  display: block;
 }
